WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132899
Fix "ASSERTION FAILED: m_representation == PlatformLayerRepresentation" with UI-side compositing
https://bugs.webkit.org/show_bug.cgi?id=132899
Summary
Fix "ASSERTION FAILED: m_representation == PlatformLayerRepresentation" with ...
Simon Fraser (smfr)
Reported
2014-05-13 21:10:48 PDT
Fix "ASSERTION FAILED: m_representation == PlatformLayerRepresentation" with UI-side compositing
Attachments
Patch
(7.08 KB, patch)
2014-05-13 21:12 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-13 21:12:54 PDT
Created
attachment 231433
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-13 21:16:17 PDT
http://trac.webkit.org/changeset/168779
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug