Fix "ASSERTION FAILED: m_representation == PlatformLayerRepresentation" with UI-side compositing https://bugs.webkit.org/show_bug.cgi?id=132899

Reviewed by Beth Dakin.

Source/WebCore:

Export some things

* WebCore.exp.in:

Source/WebKit2:

The new InsetClipLayer and ContentShadowLayer members on scrolling nodes
need to be correctly encoded/decoded for UI-side compositing, and dumped
correctly.

* Shared/Scrolling/RemoteScrollingCoordinatorTransaction.cpp:
(ArgumentCoder<ScrollingStateScrollingNode>::encode):
(ArgumentCoder<ScrollingStateScrollingNode>::decode):
(WebKit::RemoteScrollingTreeTextStream::dump):
* UIProcess/Scrolling/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::connectStateNodeLayers):

Canonical link: https://commits.webkit.org/150953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168779 268f45cc-cd09-0410-ab3c-d52691b4dbfc